--- a/src/index.css
+++ b/src/index.css
@@ -9,12 +9,15 @@ html,
 body {
   width: 100dvw;
   overflow-x: hidden;
+  scrollbar-width: none;
   background-color: black;
   color: white;
   scroll-behavior: smooth;
   font-family: "Mona Sans", sans-serif;
 }
-
+body::-webkit-scrollbar {
+  display: none; /* Chrome, Safari */
+}
 section {
   width: 100dvw;
 }
